# machine-learning-az-notes

./: .gitignore  README.md  pyproject.toml
01 - Data preprocessing/: 01_data_preprocessing.ipynb  R.ipynb
02 - Regression/: 04_simple_linear_regression.ipynb  05_multiple_linear_regression.ipynb  06_polinomic_regression.ipynb  07_support_vector_regression.ipynb  08_desicion_tree_regression.ipynb  09_random_forest_regression.ipynb
03 - Classification/: 12_logistic_regression.ipynb  13_k-nearest-neighbors.ipynb  14_support_vector_machine.ipynb  15_kernel_svm.ipynb  16_navie_bayes.ipynb  17_decision_tree.ipynb  18_random_forest_classification.ipynb
04 - Clustering/: 21_kmeans_cluestering.ipynb  22_hierarchical_clustering.ipynb
05 - Association Rule Learning/: 23_apriori.ipynb  24_eclat.ipynb
06 - Reinforcement Learning/: 25_upper_confidence_bound.ipynb  26_thompson_sampling.ipynb
07 - Natural Language Processing/: 27_natural_language_processing.ipynb
08 - Deep Learning/: 28_ann.py  28_artificial_neuron_network.py  29_cnn.py  clientExitedClassifier.keras
09 - Reduction of dimension/: 30_acp.ipynb  31_lda.ipynb  32_kernel_acp.ipynb
10 - Model selection/: 33_kfold_cross_validation.ipynb  34_grid_search.ipynb
Xgboost/: 35_xgboost.ipynb
