[project]
name = "machine-learning-az-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "jupyterlab>=4.5.1",
  "jupyterlab-lsp>=5.2.0",
  "matplotlib>=3.10.8",
  "pandas>=2.3.3",
  "ruff>=0.14.11",
  "scikit-learn>=1.8.0",
  "spicy>=0.16.0",
  "statsmodels>=0.14.6",
  "tensorflow>=2.20.0",
  "xgboost>=3.1.3",
]

[project.optional-dependencies]
dev = ["ruff >= 0.14.11", "ty >= 0.0.11"]

[tool.ty.environment]
python = "./.venv/bin/python"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
